// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet should render correctly 1`] = `
<AvoidKeyboard
  androidBehavior="height"
  iOSBehavior="height"
>
  <PeachScrollView
    contentContainerStyle={
      {
        "height": "100%",
        "paddingLeft": 32,
        "paddingRight": 32,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[MockFunction]}
        refreshing={false}
      />
    }
    style={
      {
        "height": "100%",
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "flexShrink": 1,
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <PeachText
          style={
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "marginBottom": 16,
              "textTransform": "uppercase",
            }
          }
        >
          total balance
          :
        </PeachText>
        <BigSatsFormat
          sats={21}
          style={{}}
        />
        <PeachText
          style={
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "marginTop": 64,
              "textTransform": "uppercase",
            }
          }
        >
          send to
          :
        </PeachText>
        <BitcoinAddressInput
          errorMessage=""
          isValid={true}
          onChange={[MockFunction]}
          style={
            {
              "marginTop": 16,
            }
          }
          value="address"
        />
        <OpenWallet />
      </View>
      <SlideToUnlock
        disabled={false}
        label1="send all"
        onUnlock={[MockFunction]}
        style={
          {
            "marginBottom": 24,
          }
        }
      />
    </View>
  </PeachScrollView>
</AvoidKeyboard>
`;

exports[`Wallet should render correctly when loading 1`] = `
<BitcoinLoading
  text="wallet loading,
one sec..."
/>
`;

exports[`Wallet should render correctly when refreshing 1`] = `
<AvoidKeyboard
  androidBehavior="height"
  iOSBehavior="height"
>
  <PeachScrollView
    contentContainerStyle={
      {
        "height": "100%",
        "paddingLeft": 32,
        "paddingRight": 32,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[MockFunction]}
        refreshing={false}
      />
    }
    style={
      {
        "height": "100%",
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "flexShrink": 1,
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <PeachText
          style={
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "marginBottom": 16,
              "textTransform": "uppercase",
            }
          }
        >
          total balance
          :
        </PeachText>
        <BigSatsFormat
          sats={21}
          style={
            {
              "opacity": 0.6,
            }
          }
        />
        <Loading
          style={
            {
              "position": "absolute",
            }
          }
        />
        <PeachText
          style={
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "marginTop": 64,
              "textTransform": "uppercase",
            }
          }
        >
          send to
          :
        </PeachText>
        <BitcoinAddressInput
          errorMessage=""
          isValid={true}
          onChange={[MockFunction]}
          style={
            {
              "marginTop": 16,
            }
          }
          value="address"
        />
        <OpenWallet />
      </View>
      <SlideToUnlock
        disabled={false}
        label1="send all"
        onUnlock={[MockFunction]}
        style={
          {
            "marginBottom": 24,
          }
        }
      />
    </View>
  </PeachScrollView>
</AvoidKeyboard>
`;
